# GearWorkbench

./: .gitignore  LICENSE  README.md  pyproject.toml
src/makelpro/: __init__.py  analysis.py  fbd.py  gearbox_gui.py  technic_draw.py
tests/: test_smoke.py
